# dist/api.yml
@@ -142,14 +142,8 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  players_details:  
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/basic_player_details'
-                  match_details:  
-                    $ref: '#/components/schemas/matches_full_details_with_event_log'
+                $ref:  '#/components/schemas/team_page_details'
+
                     
         "400":
           description: Something went wrong when trying to retrieve matches OR Something went wrong when trying to retrieve team or players' details
@@ -209,9 +203,9 @@ paths:
            $ref: '#/components/schemas/new_game_event'
       responses:
         '201':
-          description: "event added successfully"
-        '404':
-          description: "match could not be found"
+          description: "event of type ${event_type_name} was added successfully"
+        '400':
+          description: "can't add event to match since it was over or does not exist or due to bad input"
   /players/{player_id}:
     get:
       tags: 
@@ -227,46 +221,19 @@ paths:
       responses:
         "200":
           description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/player_full_details'
         "404":
           description: "invalid player id"
-  # /users/{user_id}:   
-  #   get:
-  #     tags: 
-  #       - users
-  #     summary: get_user_by_id 
-  #     parameters: 
-  #     - in: "path"
-  #       name: user_id
-  #       required: true
-  #       schema:
-  #         type: integer
-  #     responses:
-  #       "200":
-  #         description: "returned user that matches user id"
-  #       "404":
-  #         description: "invalid user id"
-  # /teams/{team_id}:   
-  #   get:
-  #     tags: 
-  #       - teams
-  #     summary: get_team_by_id 
-  #     parameters: 
-  #     - in: "path"
-  #       name: team_id
-  #       required: true
-  #       schema:
-  #         type: integer
-  #     responses:
-  #       "200":
-  #         description: "returned team that matches team id"
-  #       "404":
-  #         description: "invalid team id"
+
   /search/{category_name}/{name_query}:
     get:
       tags: 
         - search
-      summary: get_player_by_name
-      description: get player by full or partial name query. 
+      summary: search_by_name 
+      description: search for {category_name} based on partial or full {name_query} 
       parameters: 
       - in: "path"
         name: category_name
@@ -281,8 +248,17 @@ paths:
       responses:
         "200":
           description: "returned players that match name query"
-        "404":
-          description: "invalid name query, could not find players"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  oneOf:
+                    - $ref: '#/components/schemas/player_full_details'
+                    - $ref: '#/components/schemas/team_details'
+        "400":
+          description: "Something went wrong when trying to search in external API"
           
 
   /users/favorites/{category_name}:
@@ -306,6 +282,16 @@ paths:
       responses:
         "200":
           description: ''
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  oneOf:
+                    - $ref: '#/components/schemas/player_full_details'
+                    - $ref: '#/components/schemas/team_details'
+                    - $ref: '#/components/schemas/match_full_details' #without event logs because future matches
         "400":
           description: "invalid category name"
     post:
@@ -336,7 +322,7 @@ paths:
                   description: id of favorite {category_name} to add to user
                   example: 3
       responses:
-        '200':
+        '201':
           description: "The {category_name} was successfully saved as a favorite"
         "400":
           description: "invalid category name"
@@ -475,7 +461,7 @@ components:
                 - type: integer
                   description: match_id
                 - $ref: '#/components/schemas/new_game_event'
-    basic_player_details:
+    player_basic_details:
       type: object
       properties:
         id:
@@ -503,3 +489,36 @@ components:
           type: string
           description: image_path
           example: 'https://cdn.sportmonks.com/images/soccer/players/24/82808.png'
+    player_full_details:
+      allOf:
+      - $ref: '#/components/schemas/player_basic_details'
+      - type: string
+        description: team_name
+      - type: string
+        description: position
+    team_details:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1789
+        name:
+          type: string
+          example: 'OB'
+        logo:
+          type: string
+          description: logo path
+          example:  "https://cdn.sportmonks.com/images//soccer/teams/29/1789.png"
+        venue_id:
+          type: integer
+          description: home team court
+          example: 82808
+    team_page_details:
+      type: object
+      properties:
+        players_details:  
+          type: array
+          items:
+              $ref: '#/components/schemas/player_basic_details'
+        match_details:  
+          $ref: '#/components/schemas/matches_full_details_with_event_log'
